fix menu text sizing, overflow ellipsis & footer links

--- a/assets/styles/sass/pages/menu.scss
+++ b/assets/styles/sass/pages/menu.scss
@@ -114,18 +114,27 @@
             background-color: white;
             border-radius: 20px;
             width: auto;
-            height: max-content;
+            height: fit-content;
             box-shadow: 0px 4.01px 15.04px 0px #0000001a;
             & .item_text {
               padding: 1em;
+              flex-grow: 1;
+              flex-shrink: 1; // Permet au texte de se rétrécir
+              overflow: hidden; // Nécessaire pour 'ellipsis'
+              width: 550px;
+              z-index: 110;
               & h3 {
-                font-size: clamp(1.4em, 3vw, 2em);
+                font-size: clamp(1.3em, 3vw, 2em);
+                text-wrap: nowrap;
               }
               & p {
                 font-size: clamp(1.1em, 2vw, 1.5em);
                 font-weight: 300;
                 color: $grey;
                 margin-top: 0.4em;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
               }
             }
             & .price-container {
@@ -133,13 +142,12 @@
               height: 100%;
               display: flex;
               justify-content: flex-end;
-              align-items: center;
+              align-items: flex-end;
               padding: 0;
               margin: 0;
               & .checked-panel {
                 border-radius: 0 20px 20px 0;
                 background-color: $lightGreen;
-                z-index: 100;
                 display: flex;
                 width: 0;
                 height: clamp(120px, 120px, 7vh);
@@ -155,6 +163,10 @@
                 font-weight: 700;
                 font-size: 1.2em;
                 margin-right: 1em;
+                margin-bottom: 1em;
+                margin-top: 0;
+                margin-left: 0;
+                padding: 0;
               }
             }
             &:hover {
@@ -163,7 +175,7 @@
                 & span {
                   transform: translateX(-0.3em);
                   transition: all 0.5s ease-in-out;
-                  height: 100%;
+                  // height: 100%;
                 }
                 & .checked-panel {
                   display: inline-flex;
