--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -744,34 +744,42 @@ button:hover,
   background-color: white;
   border-radius: 20px;
   width: auto;
-  height: max-content;
+  height: fit-content;
   box-shadow: 0px 4.01px 15.04px 0px rgba(0, 0, 0, 0.1019607843);
 }
 .menu__main .menu__section__content__item__dish__container__item .item_text {
   padding: 1em;
+  flex-grow: 1;
+  flex-shrink: 1;
+  overflow: hidden;
+  width: 550px;
+  z-index: 110;
 }
 .menu__main .menu__section__content__item__dish__container__item .item_text h3 {
-  font-size: clamp(1.4em, 3vw, 2em);
+  font-size: clamp(1.3em, 3vw, 2em);
+  text-wrap: nowrap;
 }
 .menu__main .menu__section__content__item__dish__container__item .item_text p {
   font-size: clamp(1.1em, 2vw, 1.5em);
   font-weight: 300;
   color: #353535;
   margin-top: 0.4em;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .menu__main .menu__section__content__item__dish__container__item .price-container {
   width: 25%;
   height: 100%;
   display: flex;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-end;
   padding: 0;
   margin: 0;
 }
 .menu__main .menu__section__content__item__dish__container__item .price-container .checked-panel {
   border-radius: 0 20px 20px 0;
   background-color: #99e2d0;
-  z-index: 100;
   display: flex;
   width: 0;
   height: clamp(120px, 120px, 7vh);
@@ -785,11 +793,14 @@ button:hover,
   font-weight: 700;
   font-size: 1.2em;
   margin-right: 1em;
+  margin-bottom: 1em;
+  margin-top: 0;
+  margin-left: 0;
+  padding: 0;
 }
 .menu__main .menu__section__content__item__dish__container__item:hover .price-container span {
   transform: translateX(-0.3em);
   transition: all 0.5s ease-in-out;
-  height: 100%;
 }
 .menu__main .menu__section__content__item__dish__container__item:hover .price-container .checked-panel {
   display: inline-flex;
